# portfolio-email-sender-worker

./: .gitignore  lambda.py  package-lock.json  package.json  pyproject.toml  serverless.yaml
app/factories/: email_sender.py
app/infra/services/: mail.py
app/main/: contacts.py
app/main/configs/: enviroment.py
app/main/forms/: contact.py
app/main/serializer/: contact_serializer.py
tests/e2e/: test_send_email.py
